added pic format avif to Adventure section, correst styles

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="styles/reset.css" />
         <link rel="stylesheet" href="styles/styles.css" />
-        <link rel="stylesheet" href="https://unpkg.com/open-props/open-props.min.css" />
         <title>Thai Teacher Papin</title>
     </head>
     <body>
@@ -341,24 +340,27 @@
                         <div class="adventure__text-list">
                             <div class="adventure__wrap-text">
                                 <span class="adventure__text-item">
-                                    🌴 Explore incredible places — from the bustling streets of Bangkok to the paradise beaches of Phuket and Samui, as well as
-                                    the ancient temples of Chiang Mai and Chiang Rai in the north.
+                                    🌴 Explore incredible places — bustling streets of Bangkok, paradise beaches of Phuket and Samui, the ancient temples of
+                                    Chiang Mai and Chiang Rai in the north.
                                 </span>
                             </div>
                             <div class="adventure__wrap">
                                 <picture>
+                                    <source srcset="img/bangkok.avif" type="image/avif" />
                                     <source srcset="img/bangkok.webp" type="image/webp" />
                                     <img src="img/bangkok.jpg" loading="lazy" alt="Photo of Bangkok" class="adventure__img" />
                                 </picture>
                             </div>
                             <div class="adventure__wrap">
                                 <picture>
+                                    <source srcset="img/island.avif" type="image/avif" />
                                     <source srcset="img/island.webp" type="image/webp" />
                                     <img src="img/island.jpg" loading="lazy" alt="Photo of island" class="adventure__img" />
                                 </picture>
                             </div>
                             <div class="adventure__wrap">
                                 <picture>
+                                    <source srcset="img/chiang-mai.avif" type="image/avif" />
                                     <source srcset="img/chiang-mai.webp" type="image/webp" />
                                     <img src="img/chiang-mai.jpg" loading="lazy" alt="Photo of Chiang Mai" class="adventure__img" />
                                 </picture>
@@ -372,18 +374,21 @@
 
                             <div class="adventure__wrap">
                                 <picture>
+                                    <source srcset="img/fruit.avif" type="image/avif" />
                                     <source srcset="img/fruit.webp" type="image/webp" />
                                     <img src="img/fruit.jpg" loading="lazy" alt="Photo of fruit" class="adventure__img" />
                                 </picture>
                             </div>
                             <div class="adventure__wrap">
                                 <picture>
+                                    <source srcset="img/night-market.avif" type="image/avif" />
                                     <source srcset="img/night-market.webp" type="image/webp" />
                                     <img src="img/night-market.jpg" loading="lazy" alt="Photo of night market" class="adventure__img" />
                                 </picture>
                             </div>
                             <div class="adventure__wrap">
                                 <picture>
+                                    <source srcset="img/city.avif" type="image/avif" />
                                     <source srcset="img/city.webp" type="image/webp" />
                                     <img src="img/city.jpg" loading="lazy" alt="Photo of city" class="adventure__img" />
                                 </picture>
@@ -414,18 +419,21 @@
 
                             <div class="adventure__wrap">
                                 <picture>
+                                    <source srcset="img/songkran.avif" type="image/avif" />
                                     <source srcset="img/songkran.webp" type="image/webp" />
                                     <img src="img/songkran.jpg" loading="lazy" alt="Photo of Songkran Bangkok" class="adventure__img" />
                                 </picture>
                             </div>
                             <div class="adventure__wrap">
                                 <picture>
+                                    <source srcset="img/songkran-2.avif" type="image/avif" />
                                     <source srcset="img/songkran-2.webp" type="image/webp" />
                                     <img src="img/songkran-2.jpg" loading="lazy" alt="Photo of Songkran" class="adventure__img" />
                                 </picture>
                             </div>
                             <div class="adventure__wrap">
                                 <picture>
+                                    <source srcset="img/lantern-festival.avif" type="image/avif" />
                                     <source srcset="img/lantern-festival.webp" type="image/webp" />
                                     <img src="img/lantern-festival.jpg" loading="lazy" alt="Photo of Lantern Festival" class="adventure__img" />
                                 </picture>
@@ -439,18 +447,21 @@
 
                             <div class="adventure__wrap">
                                 <picture>
+                                    <source srcset="img/lantern-festival-2.avif" type="image/avif" />
                                     <source srcset="img/lantern-festival-2.webp" type="image/webp" />
                                     <img src="img/lantern-festival-2.jpg" loading="lazy" alt="Photo of Lantern Festival" class="adventure__img" />
                                 </picture>
                             </div>
                             <div class="adventure__wrap">
                                 <picture>
+                                    <source srcset="img/loy-krathong.avif" type="image/avif" />
                                     <source srcset="img/loy-krathong.webp" type="image/webp" />
                                     <img src="img/loy-krathong.jpg" loading="lazy" alt="Photo of Loy Krathong" class="adventure__img" />
                                 </picture>
                             </div>
                             <div class="adventure__wrap">
                                 <picture>
+                                    <source srcset="img/loy-krathong-2.avif" type="image/avif" />
                                     <source srcset="img/loy-krathong-2.webp" type="image/webp" />
                                     <img src="img/loy-krathong-2.jpg" loading="lazy" alt="Photo of Loy Krathong" class="adventure__img" />
                                 </picture>
