deleted fonts, added reveal animation, added button-to-top

--- a/index.html
+++ b/index.html
@@ -5,19 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="styles/reset.css" />
         <link rel="stylesheet" href="styles/styles.css" />
+        <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
         <title>Thai Teacher Papin</title>
     </head>
     <body>
-        <header id="myHeader" class="header">
+        <header class="header">
             <div class="container">
                 <nav class="nav">
                     <a href="#about" class="nav__link">About me</a>
                     <a href="#lessons" class="nav__link">Lessons</a>
                     <a href="#faq" class="nav__link">FAQ</a>
-                    <button id="openmenu" class="nav__button button">
-                        <span class="nav__line"></span>
-                        <span></span>
-                    </button>
                 </nav>
             </div>
         </header>
@@ -722,9 +719,9 @@
 
             <!-- Choose -->
 
-            <section class="choose">
+            <section class="choose container">
                 <div class="choose__section">
-                    <div class="choose__wrapper container">
+                    <div class="choose__wrapper">
                         <div class="choose__grid">
                             <div class="choose__central-block choose__central-block_main">
                                 <div class="choose__hgroup">
@@ -880,6 +877,7 @@
                     </div>
                 </div>
             </section>
+            <button class="scroll-to-top" aria-label="Scroll to top">↑</button>
         </main>
 
         <!-- Footer -->
@@ -905,13 +903,15 @@
         </footer>
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://unpkg.com/scrollreveal"></script>
         <script src="https://cdn.jsdelivr.net/npm/motion@11.11.13/dist/motion.js"></script>
         <script type="module" src="https://cdn.jsdelivr.net/npm/baseline-status@1.0.4/baseline-status.min.js"></script>
-        <script src="scripts/nav.js"></script>
         <script src="scripts/animate-text.js"></script>
         <script src="scripts/accordion.js"></script>
         <script src="scripts/horizontal-scroll.js"></script>
         <script src="scripts/increase-number.js"></script>
         <script src="scripts/slider.js"></script>
+        <script src="scripts/scroll.js"></script>
+        <script src="scripts/button-to-top.js"></script>
     </body>
 </html>
