removed reveal animation

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="styles/reset.css" />
         <link rel="stylesheet" href="styles/styles.css" />
-        <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
         <title>Thai Teacher Papin</title>
     </head>
     <body>
@@ -719,9 +718,9 @@
 
             <!-- Choose -->
 
-            <section class="choose container">
+            <section class="choose">
                 <div class="choose__section">
-                    <div class="choose__wrapper">
+                    <div class="choose__wrapper container">
                         <div class="choose__grid">
                             <div class="choose__central-block choose__central-block_main">
                                 <div class="choose__hgroup">
@@ -903,7 +902,6 @@
         </footer>
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="https://unpkg.com/scrollreveal"></script>
         <script src="https://cdn.jsdelivr.net/npm/motion@11.11.13/dist/motion.js"></script>
         <script type="module" src="https://cdn.jsdelivr.net/npm/baseline-status@1.0.4/baseline-status.min.js"></script>
         <script src="scripts/animate-text.js"></script>
@@ -911,7 +909,6 @@
         <script src="scripts/horizontal-scroll.js"></script>
         <script src="scripts/increase-number.js"></script>
         <script src="scripts/slider.js"></script>
-        <script src="scripts/scroll.js"></script>
         <script src="scripts/button-to-top.js"></script>
     </body>
 </html>
