fix styles, added buttons, create Readme

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <!-- Top block -->
 
             <section class="top">
-                <div class="top__wrapper container">
+                <div class="top__wrapper">
                     <div class="top__block">
                         <h1 class="top__title">
                             Start today.<br />
@@ -71,8 +71,7 @@
 
                             <div class="about__text-block">
                                 <span class="about__text">
-                                    My heart lies in sharing the richness of the Thai language with the world, and I'm thrilled to welcome you to my online
-                                    classroom!
+                                    My heart lies in sharing the richness of the Thai language with the world, and I'm thrilled to welcome you to my website!
                                 </span>
 
                                 <span class="about__text">
@@ -88,6 +87,12 @@
                                     My lessons will help you master the language through practical and simple techniques, allowing you to speak confidently and
                                     enjoy the learning process.
                                 </span>
+                                <span class="about__text about__text_weight">
+                                    Start your Thai language journey today and make learning fun and effortless!
+                                </span>
+                            </div>
+                            <div class="about__link-block link-block">
+                                <a href="https://akkarawin-t.systeme.io/papinthaicourse" target="_blank" class="about__link link">Buy lesson</a>
                             </div>
                         </div>
                     </div>
@@ -396,9 +401,6 @@
                                 </span>
                             </div>
                         </div>
-                        <p class="adventure__text">
-                            Knowing the language turns your trip to Thailand into a real adventure! Start learning Thai today and feel the difference!
-                        </p>
                     </div>
 
                     <div class="adventure__block-wrap">
@@ -469,8 +471,12 @@
                             </div>
                         </div>
                         <p class="adventure__text">
-                            Knowing the language turns your trip to Thailand into a real adventure! Start learning Thai today and feel the difference!
+                            Knowing the language turns your trip to Thailand into a real adventure! <br />
+                            Start learning Thai today and feel the difference!
                         </p>
+                        <div class="adventure__link-block link-block">
+                            <a href="https://akkarawin-t.systeme.io/papinthaicourse" target="_blank" class="adventure__link link">Buy lesson</a>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -540,8 +546,8 @@
 
                                 <div class="lessons__bottom-block">
                                     <span class="lessons__bottom-item"> 📚 Choose a lesson and start speaking Thai with confidence! </span>
-                                    <div class="lessons__link-block">
-                                        <a href="https://akkarawin-t.systeme.io/papinthaicourse" class="lessons__link">Buy lesson</a>
+                                    <div class="lessons__link-block link-block">
+                                        <a href="https://akkarawin-t.systeme.io/papinthaicourse" target="_blank" class="lessons__link link">Buy lesson</a>
                                     </div>
                                 </div>
                             </div>
